# thumbnail-api-server

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: main.py
app/internal/: database.py  dependencies.py
app/internal/api/: server.py
app/internal/api/v1/: health.py  jobs.py  router.py  thumbnails.py
app/internal/configuration/: settings.py
app/internal/log/: logger.py
app/internal/services/: image.py  storage.py
app/internal/tasks/: __init__.py  celery.py  thumbnail.py
deployment/: dev-values.yaml
helm-charts/: Chart.yaml  values.yaml
helm-charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  minio.yaml  postgresql.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm-charts/templates/tests/: test-connection.yaml
