[project]
name = "thumbnail-api-server"
version = "0.1.0"
description = "Building a long-running job API which accepts image files, creates thumbnails, and allows the thumbnails to be fetched when done processing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.29",
    "celery[redis]>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
